K8S/MSSQL-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssqldb
spec:
  selector:
    matchLabels:
      app: mssqldb
  template:
    metadata:
      labels:
        app: mssqldb
    spec:
       containers:
        - name: mssqldb
          image:  mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - name: mssqldb-port
              containerPort: 1433
