K8S/Postegresql-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posrpdb
spec:
  selector:
    matchLabels:
      app: posrpdb
  template:
    metadata:
      labels:
        app: posrpdb
    spec:
      containers:
      - name: posrpdb
        image: postgres
        ports:
          - name: psql-port
            containerPort: 5432
