K8S/MSSQL-CIP.yml
apiVersion: v1
kind: Service
metadata:
  name: mssqldb-cip
spec:
  type: ClusterIP
  selector:
    app: mssqldb
  ports:
  - port: 1433
    targetPort: mssqldb-port
