K8S/POSMS-CIP.yml
apiVersion: v1
kind: Service
metadata:
  name: posms-cip
spec:
  type: ClusterIP
  selector:
    app: posms
  ports:
  - port: 80
    targetPort: posms-port
    name: http
  - port: 9090
    targetPort: grpc-port
    name: grpc
