K8S/POSRepair-CIP.yml
apiVersion: v1
kind: Service
metadata:
  name: posrp-cip
spec:
  type: ClusterIP
  selector:
    app: posrepair
  ports:
  - port: 8080
    targetPort: posrepair-port
