K8S/RabbitMQ-CIP.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cip
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    targetPort: rabbitmq-port
