K8S/NGINX-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: pos.com
      http:
        paths:
          - path: /api/devices
            pathType: Prefix
            backend:
              service:
                name: posms-cip
                port:
                  number: 80
          - path: /api/v1/device
            pathType: Prefix
            backend:
              service:
                name: posrp-cip
                port:
                  number: 8080
